@@ -107,6 +107,7 @@ library:
 @item Matroska audio            @tab X @tab
 @item MAXIS XA                  @tab   @tab X
     @tab Used in Sim City 3000; file extension .xa.
+@item MD Studio                 @tab   @tab X
 @item Monkey's Audio            @tab   @tab X
 @item Motion Pixels MVI         @tab   @tab X
 @item MOV/QuickTime/MP4         @tab X @tab X
@@ -532,6 +533,7 @@ following image formats are supported:
     @tab decoding supported through external library libopencore-amrwb
 @item Apple lossless audio   @tab  X  @tab  X
     @tab QuickTime fourcc 'alac'
+@item Atrac 1                @tab     @tab  X
 @item Atrac 3                @tab     @tab  X
 @item Delphine Software International CIN audio  @tab     @tab  X
     @tab Codec used in Delphine Software International games.
